# MeMail

./: .gitignore  Client.py  README.md  docker-compose.yml  main.py  package-lock.json  package.json  tests_validateUserInput.cpp  validateUserInput.cpp  validateUserInput.h
data/: temp.txt
src/: CMakeLists.txt  Dockerfile  FirstUserInput.cpp  FirstUserInput.h  HashRepeats.cpp  HashRepeats.h  IHasher.h  IUserInput.h  initializeBLSystem.cpp  initializeBLSystem.h  initializeBLSystemTest.cpp  initializeSystem.cpp  initializeSystem.h  labels.js  main.cpp  runHashOnURL.cpp  runHashOnURL.h  temp.txt  userAction.cpp  userAction.h  validateUserInput.cpp  validateUserInput.h  validateUserInputTest.cpp
src/client/: dockerfile  main.py
src/communication/: Client.py  IClient.py
src/hash/: HashRepeats.cpp  HashRepeats.h  IHasher.h  runHashOnURL.cpp  runHashOnURL.h
src/initialization/: IProgram.h  Program.cpp  Program.h  initializeBLSystem.cpp
src/models/: blacklist.js  mails.js  users.js
src/node-server/: .env  .env.example  Dockerfile  app.js  package-lock.json  package.json
src/node-server/controllers/: blacklist.js  draft.js  labels.js  mails.js  tokens.js  users.js
src/node-server/middleware/: auth.js  avatarUpload.js
src/node-server/models/: blacklist.js  draft.js  labels.js  mails.js  tokens.js  users.js
src/node-server/routes/: blacklist.js  draft.js  index.js  labels.js  mails.js  tokens.js  users.js
src/react_app/: Dockerfile  package-lock.json  package.json
src/react_app/public/: index.html
src/react_app/src/: App.js  HelloWorld.js  index.js
src/react_app/src/AdvSearchForm/: AdvSearchForm.css  AdvSearchForm.js
src/react_app/src/AdvancedSearch/: AdvancedSearch.css  AdvancedSearch.js
src/react_app/src/CancelMailButton/: CancelMailButton.css  CancelMailButton.js
src/react_app/src/CustomLabelMenu/: CustomLabelMenu.css  CustomLabelMenu.js  LabelOptionsMenu.css  LabelOptionsMenu.js  NewCustomLabelWindow.css  NewCustomLabelWindow.js
src/react_app/src/DarkModeButton/: DarkModeButton.css  DarkModeButton.js
src/react_app/src/DeleteMailButton/: DeleteMailButton.css  DeleteMailButton.js
src/react_app/src/FavoriteMailButton/: FavoriteMailButton.css  FavoriteMailButton.js
src/react_app/src/ForwardButton/: ForwardButton.css  ForwardButton.js
src/react_app/src/Label/: Label.css  Label.js
src/react_app/src/LabelMenu/: LabelMenu.css  LabelMenu.js
src/react_app/src/LeftMenu/: LeftMenu.css  LeftMenu.js
src/react_app/src/LogOutButton/: LogOutButton.css  LogOutButton.js
src/react_app/src/LoginCard/: LoginCard.css  LoginCard.js
src/react_app/src/LoginPage/: LoginPage.css  LoginPage.js
src/react_app/src/MailItem/: MailItem.css  MailItem.js
src/react_app/src/MailList/: MailList.css  MailList.js
src/react_app/src/MailPlace/: MailPlace.css  MailPlace.js
src/react_app/src/MailRow/: MailRow.css  MailRow.js
src/react_app/src/MailWindow/: MailWindow.css  MailWindow.js
src/react_app/src/MainPage/: MainPage.css  MainPage.js
src/react_app/src/MarkUnreadButton/: MarkUnreadButton.css  MarkUnreadButton.js
src/react_app/src/MinimizedMail/: MinimizedMail.css  MinimizedMail.js
src/react_app/src/NewMailButton/: NewMailButton.css  NewMailButton.js
src/react_app/src/NewMailWindow/: NewMailWindow.css  NewMailWindow.js
src/react_app/src/RegisterCard/: RegisterCard.js
src/react_app/src/RegisterCards/: RegisterCard.css
src/react_app/src/RegisterCards/ChooseAvatarCard/: ChooseAvatarCard.css  ChooseAvatarCard.js
src/react_app/src/RegisterCards/ChooseDateCard/: ChooseDateCard.js
src/react_app/src/RegisterCards/ChooseMailCard/: ChooseMailCard.js
src/react_app/src/RegisterCards/ChooseNameCard/: ChooseNameCard.js
src/react_app/src/RegisterCards/ChoosePasswordCard/: ChoosePasswordCard.css  ChoosePasswordCard.js
src/react_app/src/RegisterCards/LogoAndText/: LogoAndText.js
src/react_app/src/RegisterPage/: RegisterPage.js
src/react_app/src/RegisterPage/RegisterCards/: RegisterCard.css
src/react_app/src/RegisterPage/RegisterCards/ChooseAvatarCard/: ChooseAvatarCard.css  ChooseAvatarCard.js
src/react_app/src/RegisterPage/RegisterCards/ChooseDateCard/: ChooseDateCard.css  ChooseDateCard.js  validateDate.js
src/react_app/src/RegisterPage/RegisterCards/ChooseMailCard/: ChooseMailCard.js
src/react_app/src/RegisterPage/RegisterCards/ChooseNameCard/: ChooseNameCard.js
src/react_app/src/RegisterPage/RegisterCards/ChoosePasswordCard/: ChoosePasswordCard.js
src/react_app/src/RegisterPage/avatars/: avatars.js
src/react_app/src/ReplyButton/: ReplyButton.css  ReplyButton.js
src/react_app/src/SearchBar/: SearchBar.css  SearchBar.js
src/react_app/src/SelectedMailsAction/: SelectedMailsAction.css  SelectedMailsAction.js
src/react_app/src/SpamMailButton/: SpamMailButton.css  SpamMailButton.js
src/react_app/src/ThemeButton/: ThemeButton.js
src/react_app/src/TopPanel/: TopPanel.css  TopPanel.js
src/react_app/src/UserInformation/: UserInformation.css  UserInformation.js
src/react_app/src/UserWindow/: UserWindow.css  UserWindow.js
src/server/: Server.cpp  Server.h
src/tests/: ActionFactoryTest.cpp  CMakeLists.txt  CheckBlackListActionTest.cpp  CheckURLInBLTest.cpp  DeleteURLFromBLTest.cpp  Dockerfile  OutputToClientTest.cpp  addURLToBLTest.cpp  initializeBLSystemTest.cpp  runHashOnURLTest.cpp  serverTest.cpp  tests_initializeSystem.cpp  userActionTest.cpp  userOutputTest.cpp  validateUserInputTest.cpp
src/user/: BloomFilter.cpp  BloomFilter.h
src/user/actions/: ActionFactory.cpp  ActionFactory.h  AddURLToBL.cpp  AddURLToBL.h  BadAction.cpp  BadAction.h  CheckBlackListAction.cpp  CheckBlackListAction.h  CheckURLInBL.cpp  CheckURLInBL.h  DeleteURLFromBL.cpp  DeleteURLFromBL.h  IAction.h  userAction.cpp  userAction.h
src/user/user_input/: FirstUserInput.cpp  FirstUserInput.h  IUserInput.h  MenuChoiceInput.cpp  MenuChoiceInput.h
src/user/user_output/: IUserOutput.h  OutputToClient.cpp  OutputToClient.h  UserOutput.cpp  UserOutput.h
src/validations/: validateUserInput.cpp  validateUserInput.h
(+1 files in other folders)
